--- a/.opspec/release/op.yml
+++ b/.opspec/release/op.yml
@@ -52,6 +52,10 @@ run:
           commitish: head
           name: $(version)
     - op:
+        pkg: { ref: github.com/opspec-pkgs/git.repo.resolve-commit#1.0.0 }
+        inputs: { dotGitDir: $(pkg)/.git }
+        outputs: { commit: }
+    - op:
         pkg: { ref: github.com/opspec-pkgs/github.release.create#1.0.0 }
         inputs:
           owner: opspec-pkgs
@@ -59,5 +63,5 @@ run:
           loginUsername: $(githubUsername)
           loginPassword: $(githubPassword)
           tag: $(version)
-          commitish: head
+          commitish: $(commit)
           name: $(version)
